<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">我的豆瓣</string>
	<string name="app_desc">（豆瓣客户端）</string>
	<string name="email">Email： </string>
	<string name="password">密 码： </string>
	<string name="captcha">验证码：</string>
	<string name="btnLogin">登 录</string>
	<string name="btnExit">返 回</string>
	<string name="btnGetCaptcha">获取验证码</string>
	<string name="userAddress">常居地：</string>
	<string name="userDescription">自我介绍：</string>
	<string name="userName">名 号：</string>
	<string name="user_login">用户登录</string>
	<string name="tab_main_nav_me">我的资料</string>
	<string name="tab_main_nav_home">首页</string>
	<string name="tab_main_nav_note">日记</string>
	<string name="tab_main_nav_search">搜索</string>
	<string name="tab_main_nav_more">更多</string>
	<string name="tab_main_nav_fav">我的豆瓣</string>
	<string name="btnUserEdit">编辑</string>
	<string name="menu_delete">删除</string>
	<string name="menu_edit">编辑</string>
	<string name="menu_insert">新增</string>
	<string name="noteTitle">标题</string>
	<string name="noteContent">内容</string>
	<string name="noteInfo">日记</string>
	<string name="btnConfirm">确定</string>
	<string name="btnSave">保存</string>
	<string name="btnCancel">取消</string>
	<string name="iread">我读...</string>
	<string name="isee">我看...</string>
	<string name="ilisten">我听...</string>
	<string name="bookInfo">书籍</string>
	<string name="movieInfo">电影</string>
	<string name="musicInfo">音乐</string>
	<string name="btnShowComment">查看评论</string>
	<string name="btnShowDetail">查看明细</string>
	<string name="loading">正在加载...</string>
	<string name="search">搜索</string>
	<string name="book_search_hint">书籍、作者、关键字</string>
	<string name="movie_search_hint">电影、导演、演员</string>
	<string name="music_search_hint">歌曲、歌手、关键字</string>
	<string name="new_review">评论</string>
	<string name="book_wish">想读</string>
	<string name="book_reading">在读</string>
	<string name="book_read">读过</string>
	<string name="music_wish">想听</string>
	<string name="music_listening">在听</string>
	<string name="music_listened">听过</string>
	<string name="movie_wish">想看</string>
	<string name="movie_watched">看过</string>
	<string name="review_info">评论</string>
	<string name="review_title">评论标题</string>
	<string name="review_content">评论内容</string>
	<string name="review_tags">标签(多个以空格分隔)</string>
	<string name="review_short_content">简短附注,暂时没用，请无视！</string>
	<string name="collect_info">收藏</string>
	<string name="menu_delete_collection">删除收藏</string>
	<string name="tab_main_nav_newbook">新书</string>
	<string name="tab_main_nav_comment">书评</string>
	<string name="tab_main_nav_about">关于</string>
	<string name="about_title">关于我的豆瓣</string>
	<string name="menu_about">关于</string>
	<string name="about_content">我的豆瓣是一个豆瓣客户端\n功能如下：\n1.查看豆瓣新书，豆瓣评论(全文)\n2.查看和编辑我读，我看，我读，我听，我评，广播，说说等信息\n3.图书搜索，电影搜索，音乐搜索\n
	</string>
	<string name="about_website">Website:http://chenyc.info/mydouban/</string>
	<string name="about_email">Email:chenyangcun@gmail.com</string>
	<string name="topiclist_listname">话题列表</string>
	<string name="tab_main_nav_group">关于</string>
	<string name="topic_view_replymenu">回应</string>
</resources>

