<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/settings" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:scrollbars="none"
	android:background="#FFF5F5F5">
	<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:paddingLeft="10dip" android:paddingRight="10dip"
		android:paddingTop="10dip" android:paddingBottom="10dip"
		android:scrollbars="vertical" android:background="#FFF5F5F5">
		<RelativeLayout android:layout_width="fill_parent"
			android:layout_height="fill_parent" android:background="@drawable/content_bg"
			android:id="@+id/section1">

			<TextView android:id="@+id/txtTitle" android:layout_width="fill_parent"
				android:text="@string/collect_info" android:layout_height="wrap_content" />
			<RelativeLayout android:layout_width="wrap_content"
				android:paddingTop="30dip" android:layout_below="@id/l_section1"
				android:layout_height="wrap_content" android:id="@+id/wrapper">

				<TextView android:id="@+id/txtCollectionTip"
					android:layout_width="fill_parent" android:textColor="@color/black"
					android:ellipsize="end" android:textSize="20sp" android:text=""
					android:textStyle="bold" android:layout_height="wrap_content"
					android:paddingBottom="15dip" android:maxHeight="40dip"
					android:layout_below="@id/wrapper" />

				<EditText android:text="" android:id="@+id/EdtReviewTags"
					android:hint="@string/review_tags" android:layout_width="fill_parent"
					android:layout_height="wrap_content" android:minHeight="40dip"
					android:background="@android:drawable/editbox_background"
					android:layout_below="@id/txtCollectionTip"></EditText>

				<RatingBar android:id="@+id/ratingbar" android:paddingTop="5dip"
					android:paddingBottom="5dip" android:layout_marginLeft="5dip"
					android:layout_width="wrap_content" android:stepSize="1"
					android:layout_height="wrap_content" android:numStars="5"
					android:layout_below="@id/EdtReviewTags" />

				<EditText android:text="" android:id="@+id/EdtReviewContent"
					android:gravity="top" android:layout_width="fill_parent"
					android:layout_height="100dip" android:hint="@string/review_short_content"
					android:background="@android:drawable/editbox_background"
					android:layout_below="@id/ratingbar"></EditText>

				<LinearLayout android:layout_width="fill_parent"
					android:paddingTop="10dip" android:gravity="center"
					android:layout_below="@id/EdtReviewContent" android:layout_height="wrap_content">
					<Button android:text="@string/btnSave" android:id="@+id/btnSave"
						android:width="100dp" android:layout_width="wrap_content"
						android:background="@drawable/wp_button_small"
						android:layout_height="wrap_content"></Button>

					<Button android:text="@string/btnCancel" android:id="@+id/btnCancel"
						android:background="@drawable/wp_button_small" android:width="100dp"
						android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
				</LinearLayout>

			</RelativeLayout>
		</RelativeLayout>
	</RelativeLayout>
</ScrollView>

